project(process)
add_library(${PROJECT_NAME} SHARED process.cpp)

set_target_properties(${PROJECT_NAME} PROPERTIES
	RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin
	LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin
	ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin
)
foreach(_cfg Debug Release RelWithDebInfo MinSizeRel)
	string(TOUPPER "${_cfg}" _cfg_upper)
	set_target_properties(${PROJECT_NAME} PROPERTIES
		RUNTIME_OUTPUT_DIRECTORY_${_cfg_upper} ${CMAKE_SOURCE_DIR}/bin
		LIBRARY_OUTPUT_DIRECTORY_${_cfg_upper} ${CMAKE_SOURCE_DIR}/bin
		ARCHIVE_OUTPUT_DIRECTORY_${_cfg_upper} ${CMAKE_SOURCE_DIR}/bin
	)
endforeach()

target_include_directories(${PROJECT_NAME}
PUBLIC
	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
	$<BUILD_INTERFACE:${Pnc_Map_Dir}>
	$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
)

target_compile_definitions(${PROJECT_NAME} PRIVATE PROCESS_BUILDING_DLL)

target_link_libraries(${PROJECT_NAME} PUBLIC pnc_map)

install(TARGETS ${PROJECT_NAME}
	EXPORT planningTargets
	RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
	LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
	ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
	INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
)

install(FILES
	${CMAKE_CURRENT_SOURCE_DIR}/process.h
	${CMAKE_CURRENT_SOURCE_DIR}/process_export.h
	DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
)